--- a/src/components/file/file.astro
+++ b/src/components/file/file.astro
@@ -2,7 +2,7 @@
 import Section from "@layouts/Section.astro";
 import Markdown from "@shared/Markdown.astro";
 // import fs from "node:fs/promises";
-import { PDFiumLibrary } from "@hyzyla/pdfium";
+// import { PDFiumLibrary } from "@hyzyla/pdfium";
 import Image from "@shared/Image.astro";
 import Icon from "@shared/icon.astro";
 
@@ -67,7 +67,6 @@ function getIcon(path: string) {
         case "wav":
         case "flac":
         case "ogg":
-        case "ogg":
         case "aac":
             return "Audio";
         case "txt":
@@ -106,6 +105,7 @@ if (!ENV_BOOKSHOP_LIVE && files?.length) {
         return undefined;
     });
     const path = await import("node:path");
+    const { PDFiumLibrary } = await import("@hyzyla/pdfium");
     // const sharp = (await import("sharp")).default;
     // const pdf = await import("@hyzyla/pdfium").then(async (p: any) => {
     //     return await p.init();
