--- a/src/components/blockquote/blockquote.astro
+++ b/src/components/blockquote/blockquote.astro
@@ -1,60 +1,60 @@
 ---
-import Markdown from "@shared/Markdown.astro";
+// import Markdown from "@shared/Markdown.astro";
 import Icon from "@shared/icon.astro";
 
 export interface Props {
-  type?: string;
+    type?: string;
 }
 
 // const { html } = Astro.props;
 // <Fragment set:html={html} />
 
 const icons = {
-  default: { before: "fa6-solid:quote-left", after: "fa6-solid:quote-right" },
-  correct: { before: "fa6-solid:circle-check", after: "" },
+    default: { before: "fa6-solid:quote-left", after: "fa6-solid:quote-right" },
+    correct: { before: "fa6-solid:circle-check", after: "" },
 }[Astro.props.type ?? "default"];
 ---
 
 <blockquote>
-  {icons?.before && <Icon name={icons.before} height="1.8em" />}
-  <span><slot /></span>
-  {icons?.after && <Icon name={icons.after} height="1.8em" />}
+    {icons?.before && <Icon name={icons.before} height="1.8em" />}
+    <span><slot /></span>
+    {icons?.after && <Icon name={icons.after} height="1.8em" />}
 </blockquote>
 
 <style is:global>
-  blockquote > .icon {
-    position: absolute;
-    color: rgb(var(--blockquote-color) / 0.6);
-  }
+    blockquote > .icon {
+        position: absolute;
+        color: rgb(var(--blockquote-color) / 0.6);
+    }
 
-  blockquote > .icon:first-child {
-    top: 15px;
-    left: 15px;
-  }
+    blockquote > .icon:first-child {
+        top: 15px;
+        left: 15px;
+    }
 
-  blockquote > .icon:last-child {
-    bottom: 15px;
-    right: 15px;
-  }
+    blockquote > .icon:last-child {
+        bottom: 15px;
+        right: 15px;
+    }
 
-  blockquote {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    margin: 20px auto;
-    padding: 1em 50px 1em 50px;
-    font-size: 1.4em;
-    font-style: italic;
-    line-height: 1.6;
-    border-left: 3px solid rgb(var(--blockquote-color) / 0.4);
-    background-color: rgb(var(--blockquote-color) / 0.1);
-    border-radius: var(--border-radius);
-  }
+    blockquote {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        margin: 20px auto;
+        padding: 1em 50px 1em 50px;
+        font-size: 1.4em;
+        font-style: italic;
+        line-height: 1.6;
+        border-left: 3px solid rgb(var(--blockquote-color) / 0.4);
+        background-color: rgb(var(--blockquote-color) / 0.1);
+        border-radius: var(--border-radius);
+    }
 
-  blockquote span {
-    display: block;
-    margin-top: 0.5em;
-    font-style: normal;
-    font-weight: bold;
-  }
+    blockquote span {
+        display: block;
+        margin-top: 0.5em;
+        font-style: normal;
+        font-weight: bold;
+    }
 </style>
