--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -26,7 +26,6 @@ const {
     pageSize = 0,
     limit = 0,
     aspect = 1,
-    key,
 } = Astro.props;
 
 const filterMode = "ignore include"; //ignore include exclude
@@ -138,7 +137,7 @@ if (!ENV_BOOKSHOP_LIVE) {
         <div class="card-items" style={{ "--columns": columns }}>
             {
                 cards &&
-                    cards.map((card, i) => {
+                    cards.map((card) => {
                         return <Card {include} {card} {filters} {aspect} />;
                     })
             }
