--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -1,7 +1,7 @@
 ---
 import { Markdown as RemoteMarkdown } from "astro-remote";
 import MarkdownIt from "markdown-it";
-import { replaceCmsEmbeds, stripTrailingWhitespace } from "@mws-astro/util";
+import { replaceCmsEmbeds } from "@mws-astro/util";
 import Blockquote from "@components/blockquote/blockquote.astro";
 import Button from "@components/button/button.astro";
 import Icon from "@shared/icon.astro";
