--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -33,8 +33,8 @@ let placeholder = true;
 
 // Attempt to import the image if we are given a string
 if (
-    // @ts-expect-error
-    !ENV_BOOKSHOP_LIVE &&
+    // // @ts-expect-error
+    // !ENV_BOOKSHOP_LIVE &&
     typeof Astro.props.image == "string" &&
     /^(\/?src)?\/assets/.test(Astro.props.image)
 ) {
@@ -52,8 +52,8 @@ if (
         placeholder = false;
     }
 } else if (
-    // @ts-expect-error
-    !ENV_BOOKSHOP_LIVE &&
+    // // @ts-expect-error
+    // !ENV_BOOKSHOP_LIVE &&
     typeof Astro.props.image == "string" &&
     Astro.props.image.startsWith("public/")
 ) {
