--- a/src/shared/astro/Video.astro
+++ b/src/shared/astro/Video.astro
@@ -54,9 +54,9 @@ if (url.hostname.endsWith("vimeo.com")) {
             position: absolute;
             height: max(56.25cqw, 100cqh);
             width: max(177.778cqh, 100cqw);
-            left: 50%;
+            /* left: 50%;
             top: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); */
         }
     }
 
