--- a/src/shared/astro/Page.astro
+++ b/src/shared/astro/Page.astro
@@ -2,30 +2,32 @@
 import { bookshopName } from "@mws-astro/util";
 
 export interface Props {
-  "bookshop:live"?: any;
-  contentBlocks: any[];
+    "bookshop:live"?: any;
+    contentBlocks: any[];
 }
 
 const { contentBlocks } = Astro.props;
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
-  ["/src/mws-astro/src/components/**/*.astro"],
-  {
-    eager: true,
-  }
+    ["/src/mws-astro/src/components/**/*.astro"],
+    {
+        eager: true,
+    },
 );
 
 const componentOverrides = import.meta.glob(["/src/components/**/*.astro"], {
-  eager: true,
+    eager: true,
 });
 
 Object.entries(componentImports).forEach(
-  ([path, obj]: [string, any]) => (components[bookshopName(path)] = obj.default)
+    ([path, obj]: [string, any]) =>
+        (components[bookshopName(path)] = obj.default),
 );
 
 Object.entries(componentOverrides).forEach(
-  ([path, obj]: [string, any]) => (components[bookshopName(path)] = obj.default)
+    ([path, obj]: [string, any]) =>
+        (components[bookshopName(path)] = obj.default),
 );
 
 // Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
@@ -41,16 +43,22 @@ Object.entries(componentOverrides).forEach(
 // });
 ---
 
-<main>
-  {
-    contentBlocks.map((block: any, i: number) => {
-      const Component = components[block._bookshop_name];
-      if (Component) {
-        return <Component {...block} _blocks={contentBlocks} key={String(i)} />;
-      }
-      const warnstring = `[${Astro.self.name}] Component ${block._bookshop_name} could not be found!`;
-      console.warn(warnstring);
-      return <div class="missing-component">{warnstring}</div>;
-    })
-  }
+<main data-pagefind-body>
+    {
+        contentBlocks.map((block: any, i: number) => {
+            const Component = components[block._bookshop_name];
+            if (Component) {
+                return (
+                    <Component
+                        {...block}
+                        _blocks={contentBlocks}
+                        key={String(i)}
+                    />
+                );
+            }
+            const warnstring = `[${Astro.self.name}] Component ${block._bookshop_name} could not be found!`;
+            console.warn(warnstring);
+            return <div class="missing-component">{warnstring}</div>;
+        })
+    }
 </main>
