Fix astro check issues

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ export interface Props {
     show_global_footer?: boolean;
     paths?: any[];
     currentPath?: string;
+    thumbnail?: any;
 }
 
 // const mimetypes: any = {
