--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -153,10 +153,11 @@ const expando = classList.includes("expando") ? true : false;
         justify-content: flex-start;
     }
 
-    section.align-centre .component-wrapper {
+    section.section-centre .component-wrapper,
+    section.section-center .component-wrapper {
         justify-content: center;
     }
-    section.align-bottom .component-wrapper {
+    section.section-bottom .component-wrapper {
         justify-content: flex-end;
     }
 
