--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -51,8 +51,8 @@ if (!ENV_BOOKSHOP_LIVE) {
 
     cards?.sort(
         (a, b) =>
-            b.data.publishDate.getTime() - a.data.publishDate.getTime() ||
-            a.data.order - b.data.order,
+            b.data?.publishDate.getTime() - a.data?.publishDate.getTime() ||
+            a.data?.order - b.data?.order,
     ); // Sort from newest to oldest, fall back on ascending order
 
     cards = cards?.slice(0, limit || undefined); // Limit number of cards if required
