--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -84,11 +84,15 @@ if (layout?.length) {
             const block = contentBlocks.at(i++);
             if (!block) break;
             const start = j * subcolumn + 1;
-            const columnString = `${start} / span ${subcolumn}`;
+
+            const firstColumn = start === 1;
+            const lastColumn = j + 1 === rowLayout;
+
+            const columnString = `${firstColumn ? start : start + 1} / span ${firstColumn || lastColumn ? subcolumn + 1 : subcolumn}`;
             const rowString = `${row} / span 1`;
             const cell = {
-                "first-in-row": start === 1,
-                "last-in-row": j + 1 === rowLayout,
+                "first-in-row": firstColumn,
+                "last-in-row": lastColumn,
                 "first-in-column": row === 1,
                 "last-in-column": contentBlocks.length - i <= rowLayout - j,
             };
@@ -145,10 +149,10 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
     div.columns {
         display: grid;
         grid-auto-flow: row;
-        grid-template-columns: repeat(var(--columns), minmax(min-content, 1fr));
-        /* overflow: hidden; */
-        /* gap: var(--column-gap); */
-        /* padding: calc(var(--indent) * var(--vertical-indent)) var(--indent); */
+        grid-template-columns:
+            var(--column-gap) repeat(var(--columns), minmax(min-content, 1fr))
+            var(--column-gap);
+
         background-color: rgb(var(--background-color));
     }
 
@@ -176,16 +180,16 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
 
 <style is:global lang="scss">
     .one-two > .component-wrapper > .columns {
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: var(--column-gap) 1fr 2fr var(--column-gap);
     }
     .two-one > .component-wrapper > .columns {
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: var(--column-gap) 2fr 1fr var(--column-gap);
     }
     .one-three > .component-wrapper > .columns {
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: var(--column-gap) 1fr 3fr var(--column-gap);
     }
     .three-one > .component-wrapper > .columns {
-        grid-template-columns: 3fr 1fr;
+        grid-template-columns: var(--column-gap) 3fr 1fr var(--column-gap);
     }
 
     .columns-item > section {
