--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -10,6 +10,7 @@ import Facebook from "@components/facebook/facebook.astro";
 import Social from "@components/social/social.astro";
 import Counter from "@components/counter/counter.astro";
 import AsideImage from "@components/image/asideImage.astro";
+import Player from "@components/player/player.astro";
 
 // We need to strip whitespace due to a strange bug which removes a character from the start of a line when there is whitespace before the newline.
 // const content = await stripTrailingWhitespace(Astro.props.content).then(
@@ -25,6 +26,7 @@ var substitutions = {
     Facebook,
     Social,
     'a[class*="button"]': Button,
+    Player,
     img: AsideImage,
     Counter,
 };
