--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -36,6 +36,7 @@ const { id, currentPath, paths } = Astro.props;
 ---
 
 <header
+    id="header"
     class:list={{
         pinned: preferences.header.pin_header != "false",
         contain: preferences.header.pin_header == "contain",
